lib/leirigrammar.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


# grammar productions taken directly from http://www.w3.org/TR/leiri/
# Some productions are ambiguous. The "first_match_wins" (a.k.a. "greedy") algorithm applies.

# I made the the rule LEIRI-reference the root rule instead of LEIRI as given in http://www.w3.org/TR/leiri/.
# This change allows the parser to parse either Legacy Extended IRIs (LEIRIs) or LEIRI references instead of
# only LEIRIs.
module LEIRI
  include Treetop::Runtime

  def root
    @root ||= :leiri_reference
  end

  module LeiriReference0
  	  def reference_type
  	    :absolute
	    end
  end

  module LeiriReference1
  	  def reference_type
  	    :relative
	    end
  end

  def _nt_leiri_reference
    start_index = index
    if node_cache[:leiri_reference].has_key?(index)
      cached = node_cache[:leiri_reference][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_leiri
    r1.extend(LeiriReference0)
    if r1
      r0 = r1
    else
      r2 = _nt_irelative_ref
      r2.extend(LeiriReference1)
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:leiri_reference][start_index] = r0

    r0
  end

  module Leiri0
    def iquery
      elements[1]
    end
  end

  module Leiri1
    def ifragment
      elements[1]
    end
  end

  module Leiri2
    def scheme
      elements[0]
    end

    def ihier_part
      elements[2]
    end

    def iqueryinfo
      elements[3]
    end

    def ifragmentinfo
      elements[4]
    end
  end

  module Leiri3
    def populate(leiri)
      scheme.populate(leiri)
      ihier_part.populate(leiri)
      iqueryinfo.iquery.populate(leiri) unless iqueryinfo.empty?
      ifragmentinfo.ifragment.populate(leiri) unless ifragmentinfo.empty?
    end
  end

  def _nt_leiri
    start_index = index
    if node_cache[:leiri].has_key?(index)
      cached = node_cache[:leiri][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_scheme
    s0 << r1
    if r1
      if has_terminal?(':', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(':')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_ihier_part
        s0 << r3
        if r3
          i5, s5 = index, []
          if has_terminal?('?', false, index)
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('?')
            r6 = nil
          end
          s5 << r6
          if r6
            r7 = _nt_iquery
            s5 << r7
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(Leiri0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            r4 = r5
          else
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
          if r4
            i9, s9 = index, []
            if has_terminal?('#', false, index)
              r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('#')
              r10 = nil
            end
            s9 << r10
            if r10
              r11 = _nt_ifragment
              s9 << r11
            end
            if s9.last
              r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
              r9.extend(Leiri1)
            else
              @index = i9
              r9 = nil
            end
            if r9
              r8 = r9
            else
              r8 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r8
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Leiri2)
      r0.extend(Leiri3)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:leiri][start_index] = r0

    r0
  end

  module IhierPart0
    def iauthority
      elements[1]
    end

    def ipath_abempty
      elements[2]
    end
  end

  module IhierPart1
    def populate(leiri)
      iauthority.populate(leiri)
      leiri.path = ipath_abempty.text_value
    end
  end

  module IhierPart2
    def populate(leiri)
      leiri.path = text_value
    end
  end

  def _nt_ihier_part
    start_index = index
    if node_cache[:ihier_part].has_key?(index)
      cached = node_cache[:ihier_part][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?('//', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('//')
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_iauthority
      s1 << r3
      if r3
        r4 = _nt_ipath_abempty
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IhierPart0)
      r1.extend(IhierPart1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5 = index
      r6 = _nt_ipath_absolute
      if r6
        r5 = r6
        r5.extend(IhierPart2)
      else
        r7 = _nt_ipath_rootless
        if r7
          r5 = r7
          r5.extend(IhierPart2)
        else
          r8 = _nt_ipath_empty
          if r8
            r5 = r8
            r5.extend(IhierPart2)
          else
            @index = i5
            r5 = nil
          end
        end
      end
      if r5
        r0 = r5
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:ihier_part][start_index] = r0

    r0
  end

  module AbsoluteLeiri0
    def iquery
      elements[1]
    end
  end

  module AbsoluteLeiri1
    def scheme
      elements[0]
    end

    def ihier_part
      elements[2]
    end

    def iqueryinfo
      elements[3]
    end
  end

  module AbsoluteLeiri2
    def populate(leiri)
      scheme.populate(leiri)
      ihier_part.populate(leiri)
      iqueryinfo.iquery.populate(leiri) unless iqueryinfo.empty?
    end
  end

  def _nt_absolute_leiri
    start_index = index
    if node_cache[:absolute_leiri].has_key?(index)
      cached = node_cache[:absolute_leiri][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_scheme
    s0 << r1
    if r1
      if has_terminal?(':', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(':')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_ihier_part
        s0 << r3
        if r3
          i5, s5 = index, []
          if has_terminal?("?", false, index)
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("?")
            r6 = nil
          end
          s5 << r6
          if r6
            r7 = _nt_iquery
            s5 << r7
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(AbsoluteLeiri0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            r4 = r5
          else
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(AbsoluteLeiri1)
      r0.extend(AbsoluteLeiri2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:absolute_leiri][start_index] = r0

    r0
  end

  module IrelativeRef0
    def iquery
      elements[1]
    end
  end

  module IrelativeRef1
    def ifragment
      elements[1]
    end
  end

  module IrelativeRef2
    def irelative_part
      elements[0]
    end

    def iqueryinfo
      elements[1]
    end

    def ifragmentinfo
      elements[2]
    end
  end

  module IrelativeRef3
    def populate(leiri)
      irelative_part.populate(leiri)
      iqueryinfo.iquery.populate(leiri) unless iqueryinfo.empty?
      ifragmentinfo.ifragment.populate(leiri) unless ifragmentinfo.empty?
    end
  end

  def _nt_irelative_ref
    start_index = index
    if node_cache[:irelative_ref].has_key?(index)
      cached = node_cache[:irelative_ref][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_irelative_part
    s0 << r1
    if r1
      i3, s3 = index, []
      if has_terminal?("?", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("?")
        r4 = nil
      end
      s3 << r4
      if r4
        r5 = _nt_iquery
        s3 << r5
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(IrelativeRef0)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        i7, s7 = index, []
        if has_terminal?('#', false, index)
          r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('#')
          r8 = nil
        end
        s7 << r8
        if r8
          r9 = _nt_ifragment
          s7 << r9
        end
        if s7.last
          r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
          r7.extend(IrelativeRef1)
        else
          @index = i7
          r7 = nil
        end
        if r7
          r6 = r7
        else
          r6 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r6
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IrelativeRef2)
      r0.extend(IrelativeRef3)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:irelative_ref][start_index] = r0

    r0
  end

  module IrelativePart0
    def iauthority
      elements[1]
    end

    def ipath_abempty
      elements[2]
    end
  end

  module IrelativePart1
    def populate(leiri)
      iauthority.populate(leiri)
      leiri.path = ipath_abempty.text_value
    end
  end

  module IrelativePart2
    def populate(leiri)
      leiri.path = text_value
    end
  end

  def _nt_irelative_part
    start_index = index
    if node_cache[:irelative_part].has_key?(index)
      cached = node_cache[:irelative_part][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?("//", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure("//")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_iauthority
      s1 << r3
      if r3
        r4 = _nt_ipath_abempty
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(IrelativePart0)
      r1.extend(IrelativePart1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5 = index
      r6 = _nt_ipath_absolute
      if r6
        r5 = r6
        r5.extend(IrelativePart2)
      else
        r7 = _nt_ipath_noscheme
        if r7
          r5 = r7
          r5.extend(IrelativePart2)
        else
          r8 = _nt_ipath_empty
          if r8
            r5 = r8
            r5.extend(IrelativePart2)
          else
            @index = i5
            r5 = nil
          end
        end
      end
      if r5
        r0 = r5
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:irelative_part][start_index] = r0

    r0
  end

  module Iauthority0
    def iuserinfo
      elements[0]
    end

  end

  module Iauthority1
    def port
      elements[1]
    end
  end

  module Iauthority2
    def userinfo
      elements[0]
    end

    def ihost
      elements[1]
    end

    def portinfo
      elements[2]
    end
  end

  module Iauthority3
    def populate(leiri)
      userinfo.iuserinfo.populate(leiri) unless userinfo.empty?
      ihost.populate(leiri)
      portinfo.port.populate(leiri) unless portinfo.empty?
    end
  end

  def _nt_iauthority
    start_index = index
    if node_cache[:iauthority].has_key?(index)
      cached = node_cache[:iauthority][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i2, s2 = index, []
    r3 = _nt_iuserinfo
    s2 << r3
    if r3
      if has_terminal?("@", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("@")
        r4 = nil
      end
      s2 << r4
    end
    if s2.last
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      r2.extend(Iauthority0)
    else
      @index = i2
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r5 = _nt_ihost
      s0 << r5
      if r5
        i7, s7 = index, []
        if has_terminal?(':', false, index)
          r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(':')
          r8 = nil
        end
        s7 << r8
        if r8
          r9 = _nt_port
          s7 << r9
        end
        if s7.last
          r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
          r7.extend(Iauthority1)
        else
          @index = i7
          r7 = nil
        end
        if r7
          r6 = r7
        else
          r6 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r6
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Iauthority2)
      r0.extend(Iauthority3)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:iauthority][start_index] = r0

    r0
  end

  module Iuserinfo0
    def populate(leiri)
      leiri.userinfo = text_value
    end
  end

  def _nt_iuserinfo
    start_index = index
    if node_cache[:iuserinfo].has_key?(index)
      cached = node_cache[:iuserinfo][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      r2 = _nt_iunreserved
      if r2
        r1 = r2
      else
        r3 = _nt_pct_encoded
        if r3
          r1 = r3
        else
          r4 = _nt_sub_delims
          if r4
            r1 = r4
          else
            if has_terminal?(":", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(":")
              r5 = nil
            end
            if r5
              r1 = r5
            else
              @index = i1
              r1 = nil
            end
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    r0.extend(Iuserinfo0)

    node_cache[:iuserinfo][start_index] = r0

    r0
  end

  module Ihost0
    def populate(leiri)
      leiri.host = text_value
    end
  end

  def _nt_ihost
    start_index = index
    if node_cache[:ihost].has_key?(index)
      cached = node_cache[:ihost][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_IP_literal
    if r1
      r0 = r1
      r0.extend(Ihost0)
    else
      r2 = _nt_IPv4address
      if r2
        r0 = r2
        r0.extend(Ihost0)
      else
        r3 = _nt_ireg_name
        if r3
          r0 = r3
          r0.extend(Ihost0)
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:ihost][start_index] = r0

    r0
  end

  def _nt_ireg_name
    start_index = index
    if node_cache[:ireg_name].has_key?(index)
      cached = node_cache[:ireg_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      r2 = _nt_iunreserved
      if r2
        r1 = r2
      else
        r3 = _nt_pct_encoded
        if r3
          r1 = r3
        else
          r4 = _nt_sub_delims
          if r4
            r1 = r4
          else
            @index = i1
            r1 = nil
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)

    node_cache[:ireg_name][start_index] = r0

    r0
  end

  def _nt_ipath
    start_index = index
    if node_cache[:ipath].has_key?(index)
      cached = node_cache[:ipath][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_ipath_abempty
    if r1
      r0 = r1
    else
      r2 = _nt_ipath_absolute
      if r2
        r0 = r2
      else
        r3 = _nt_ipath_noscheme
        if r3
          r0 = r3
        else
          r4 = _nt_ipath_rootless
          if r4
            r0 = r4
          else
            r5 = _nt_ipath_empty
            if r5
              r0 = r5
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:ipath][start_index] = r0

    r0
  end

  module IpathAbempty0
    def isegment
      elements[1]
    end
  end

  def _nt_ipath_abempty
    start_index = index
    if node_cache[:ipath_abempty].has_key?(index)
      cached = node_cache[:ipath_abempty][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      if has_terminal?("/", false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("/")
        r2 = nil
      end
      s1 << r2
      if r2
        r3 = _nt_isegment
        s1 << r3
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(IpathAbempty0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)

    node_cache[:ipath_abempty][start_index] = r0

    r0
  end

  module IpathAbsolute0
    def isegment
      elements[1]
    end
  end

  module IpathAbsolute1
    def isegment_nz
      elements[0]
    end

  end

  module IpathAbsolute2
  end

  def _nt_ipath_absolute
    start_index = index
    if node_cache[:ipath_absolute].has_key?(index)
      cached = node_cache[:ipath_absolute][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("/", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("/")
      r1 = nil
    end
    s0 << r1
    if r1
      i3, s3 = index, []
      r4 = _nt_isegment_nz
      s3 << r4
      if r4
        s5, i5 = [], index
        loop do
          i6, s6 = index, []
          if has_terminal?("/", false, index)
            r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("/")
            r7 = nil
          end
          s6 << r7
          if r7
            r8 = _nt_isegment
            s6 << r8
          end
          if s6.last
            r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
            r6.extend(IpathAbsolute0)
          else
            @index = i6
            r6 = nil
          end
          if r6
            s5 << r6
          else
            break
          end
        end
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        s3 << r5
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(IpathAbsolute1)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IpathAbsolute2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:ipath_absolute][start_index] = r0

    r0
  end

  module IpathNoscheme0
    def isegment
      elements[1]
    end
  end

  module IpathNoscheme1
    def isegment_nz_nc
      elements[0]
    end

  end

  def _nt_ipath_noscheme
    start_index = index
    if node_cache[:ipath_noscheme].has_key?(index)
      cached = node_cache[:ipath_noscheme][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_isegment_nz_nc
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        if has_terminal?("/", false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("/")
          r4 = nil
        end
        s3 << r4
        if r4
          r5 = _nt_isegment
          s3 << r5
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(IpathNoscheme0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IpathNoscheme1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:ipath_noscheme][start_index] = r0

    r0
  end

  module IpathRootless0
    def isegment
      elements[1]
    end
  end

  module IpathRootless1
    def isegment_nz
      elements[0]
    end

  end

  def _nt_ipath_rootless
    start_index = index
    if node_cache[:ipath_rootless].has_key?(index)
      cached = node_cache[:ipath_rootless][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_isegment_nz
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        if has_terminal?("/", false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("/")
          r4 = nil
        end
        s3 << r4
        if r4
          r5 = _nt_isegment
          s3 << r5
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(IpathRootless0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IpathRootless1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:ipath_rootless][start_index] = r0

    r0
  end

  def _nt_ipath_empty
    start_index = index
    if node_cache[:ipath_empty].has_key?(index)
      cached = node_cache[:ipath_empty][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_ipchar
    if r1
      r0 = nil
    else
      @index = i0
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:ipath_empty][start_index] = r0

    r0
  end

  def _nt_isegment
    start_index = index
    if node_cache[:isegment].has_key?(index)
      cached = node_cache[:isegment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      r1 = _nt_ipchar
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)

    node_cache[:isegment][start_index] = r0

    r0
  end

  def _nt_isegment_nz
    start_index = index
    if node_cache[:isegment_nz].has_key?(index)
      cached = node_cache[:isegment_nz][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      r1 = _nt_ipchar
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:isegment_nz][start_index] = r0

    r0
  end

  def _nt_isegment_nz_nc
    start_index = index
    if node_cache[:isegment_nz_nc].has_key?(index)
      cached = node_cache[:isegment_nz_nc][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      r2 = _nt_iunreserved
      if r2
        r1 = r2
      else
        r3 = _nt_pct_encoded
        if r3
          r1 = r3
        else
          r4 = _nt_sub_delims
          if r4
            r1 = r4
          else
            if has_terminal?("@", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("@")
              r5 = nil
            end
            if r5
              r1 = r5
            else
              @index = i1
              r1 = nil
            end
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:isegment_nz_nc][start_index] = r0

    r0
  end

  def _nt_ipchar
    start_index = index
    if node_cache[:ipchar].has_key?(index)
      cached = node_cache[:ipchar][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_iunreserved
    if r1
      r0 = r1
    else
      r2 = _nt_pct_encoded
      if r2
        r0 = r2
      else
        r3 = _nt_sub_delims
        if r3
          r0 = r3
        else
          if has_terminal?(":", false, index)
            r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(":")
            r4 = nil
          end
          if r4
            r0 = r4
          else
            if has_terminal?("@", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("@")
              r5 = nil
            end
            if r5
              r0 = r5
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:ipchar][start_index] = r0

    r0
  end

  module Iquery0
    def populate(leiri)
      leiri.query = text_value
    end
  end

  def _nt_iquery
    start_index = index
    if node_cache[:iquery].has_key?(index)
      cached = node_cache[:iquery][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      r2 = _nt_ipchar
      if r2
        r1 = r2
      else
        r3 = _nt_iprivate
        if r3
          r1 = r3
        else
          if has_terminal?("/", false, index)
            r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("/")
            r4 = nil
          end
          if r4
            r1 = r4
          else
            if has_terminal?("?", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("?")
              r5 = nil
            end
            if r5
              r1 = r5
            else
              @index = i1
              r1 = nil
            end
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    r0.extend(Iquery0)

    node_cache[:iquery][start_index] = r0

    r0
  end

  module Ifragment0
    def populate(leiri)
      leiri.fragment = text_value
    end
  end
